--- a/helm/values-uat.yaml
+++ b/helm/values-uat.yaml
@@ -48,6 +48,7 @@ microservice-chart:
       WEB_LOGGING_LEVEL: "off"
       SERVICE_LOGGING_LEVEL: "info"
       JWT_TOKEN_VALIDITY_TIME_MILLIS: "1800000"
+      CONFIDENTIAL_DATA_MANAGER_ALGORITHM: "AES"
     envSecret:
       MONGO_PASSWORD: mongo-ecommerce-password
       REDIS_PASSWORD: redis-ecommerce-password
@@ -55,6 +56,7 @@ microservice-chart:
       APPLICATIONINSIGHTS_CONNECTION_STRING: applicationinsights-connection-string
       PAYMENT_TRANSACTIONS_GATEWAY_API_KEY: payment-transactions-gateway-api-key
       JWT_SECRET: sessions-jwt-secret
+      CONFIDENTIAL_DATA_MANAGER_KEY: TODO
   image:
     repository: pagopaucommonacr.azurecr.io/pagopaecommercetransactionsservice
     tag: "0.9.2"
@@ -150,6 +152,7 @@ microservice-chart:
     WEB_LOGGING_LEVEL: "off"
     SERVICE_LOGGING_LEVEL: "info"
     JWT_TOKEN_VALIDITY_TIME_MILLIS: "1800000"
+    CONFIDENTIAL_DATA_MANAGER_ALGORITHM: "AES"
   envSecret:
     MONGO_PASSWORD: mongo-ecommerce-password
     REDIS_PASSWORD: redis-ecommerce-password
@@ -159,6 +162,7 @@ microservice-chart:
     APPLICATIONINSIGHTS_CONNECTION_STRING: applicationinsights-connection-string
     PAYMENT_TRANSACTIONS_GATEWAY_API_KEY: payment-transactions-gateway-api-key
     JWT_SECRET: sessions-jwt-secret
+    CONFIDENTIAL_DATA_MANAGER_KEY: TODO
   keyvault:
     name: "pagopa-u-ecommerce-kv"
     tenantId: "7788edaf-0346-4068-9d79-c868aed15b3d"
