--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -52,5 +52,4 @@ transactions.closure_handler.retry_interval=${CLOSURE_RETRY_INTERVAL}
 jwt.secret=${JWT_SECRET}
 jwt.validityMillis=${JWT_TOKEN_VALIDITY_TIME_MILLIS}
 
-confidentialDataManager.key=${CONFIDENTIAL_DATA_MANAGER_KEY}
-confidentialDataManager.encryptionAlgorithm=${CONFIDENTIAL_DATA_MANAGER_ALGORITHM}
+confidentialDataManager.emailEncryptionKey=${EMAIL_ENCRYPTION_KEY}
