Chk 1140 use confidential data for email field (#150)
* feat: implementation of MailConfidentialDataUtility

* fix: junit tests

* fix: code coverage

* feat: junit test check sent email address

* fix: junit test add email check

* feat: add secret key definitions

* fix: commons integration

* fix: removed pom blank spaces

* fix:trigger pipeline

* fix: commons branch

* fix: unit tests

* cr pipeline trigger

* fix: update commons version + refactoring secret name

* fix: merge main branch

* fix: update commons version

* fix: code review refactoring

* cr pipeline trigger

--- a/helm/values-dev.yaml
+++ b/helm/values-dev.yaml
@@ -108,6 +108,7 @@ microservice-chart:
     APPLICATIONINSIGHTS_CONNECTION_STRING: applicationinsights-connection-string
     PAYMENT_TRANSACTIONS_GATEWAY_API_KEY: payment-transactions-gateway-api-key
     JWT_SECRET: sessions-jwt-secret
+    EMAIL_ENCRYPTION_KEY: email-confidential-data-encryption-key
   keyvault:
     name: "pagopa-d-ecommerce-kv"
     tenantId: "7788edaf-0346-4068-9d79-c868aed15b3d"
