--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -51,3 +51,5 @@ transactions.closure_handler.retry_interval=${CLOSURE_RETRY_INTERVAL}
 
 jwt.secret=${JWT_SECRET}
 jwt.validityMillis=${JWT_TOKEN_VALIDITY_TIME_MILLIS}
+
+confidentialDataManager.emailEncryptionKey=${EMAIL_ENCRYPTION_KEY}
