fixed gec container name and Dockerfile.gec-mock

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -99,7 +99,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile.gec-mock
-    container_name: gec-mock
+    container_name: pagopa-gec-mock
     ports:
       - "8084:3000"
     networks:
