--- a/Dockerfile.gec-mock
+++ b/Dockerfile.gec-mock
@@ -1,8 +1,8 @@
 ### 1. Cloning stage
 FROM alpine/git:latest AS clone
 WORKDIR /workspace/payment-instrument
-RUN git clone https://github.com/pagopa/pagopa-ecommerce-payment-methods-service.git
-WORKDIR /workspace/payment-instrument/pagopa-ecommerce-payment-methods-service
+RUN git clone https://github.com/pagopa/pagopa-ecommerce-payment-instruments-service.git
+WORKDIR /workspace/payment-instrument/pagopa-ecommerce-payment-instruments-service
 RUN git checkout CHK-905-afm
 
 ### 3. Run stage
@@ -14,4 +14,4 @@ COPY --from=clone ${EXTRACTED} .
 
 RUN yarn global add json-server
 
-CMD ["json-server", "pagopa-ecommerce-payment-instruments-service/gec-mock/api-config-server.json", "--routes", "pagopa-ecommerce-payment-instruments-service/gec-mock/routes.json","--middlewares", "pagopa-ecommerce-payment-instruments-service/gec-mock/middleware.js" "--host", "0.0.0.0"]
+CMD ["json-server", "pagopa-ecommerce-payment-instruments-service/gec-mock/api-config-server.json", "--routes", "pagopa-ecommerce-payment-instruments-service/gec-mock/routes.json", "--middlewares", "pagopa-ecommerce-payment-instruments-service/gec-mock/middleware.js", "--host", "0.0.0.0"]
