--- a/Dockerfile.payment-instruments
+++ b/Dockerfile.payment-instruments
@@ -2,6 +2,8 @@
 FROM alpine/git:latest AS clone
 WORKDIR /workspace/payment-instrument
 RUN git clone https://github.com/pagopa/pagopa-ecommerce-payment-instruments-service
+WORKDIR /workspace/payment-instrument/pagopa-ecommerce-payment-instruments-service
+RUN git checkout CHK-905-afm
 
 ### 2. Build stage
 FROM maven:3.8.3-openjdk-17 AS build
