fixed AFM_URI variable into env.example

--- a/.env.example
+++ b/.env.example
@@ -34,7 +34,7 @@ ECOMMERCE_PAYMENT_INSTRUMENTS_CONNECTION_TIMEOUT=10000
 
 SPRING_MAX_IN_MEM_SIZE=16777216
 
-AFM_URI="pagopa-gec-mock:3000"
+AFM_URI="http://pagopa-gec-mock:3000/afm/node/calculator-service/v1/fees"
 AFM_READ_TIMEOUT=10000
 AFM_CONNECTION_TIMEOUT=10000
 AFM_KEY=key
