--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -39,6 +39,7 @@ azurestorage.connectionstring=${ECOMMERCE_STORAGE_CONNECTION_STRING}
 azurestorage.queues.transactionauthrequestedtevents.name=${TRANSACTION_AUTHORIZATION_REQUESTED_EVENT_QUEUE_NAME}
 azurestorage.queues.transactionauthrequestedtevents.visibilityTimeout=${TRANSACTION_AUTHORIZATION_REQUESTED_EVENT_QUEUE_VISIBILITY_TIMEOUT}
 azurestorage.queues.transactionactivatedevents.name=${TRANSACTION_ACTIVATED_EVENT_QUEUE_NAME}
+azurestorage.queues.transactionrefund.name=${TRANSACTION_REFUND_QUEUE_NAME}
 azurestorage.queues.transactionclosuresentevents.name=${TRANSACTION_CLOSURE_SENT_EVENT_QUEUE_NAME}
 
 spring.devtools.restart.enabled=false
