--- a/src/test/resources/application-tests.properties
+++ b/src/test/resources/application-tests.properties
@@ -40,6 +40,7 @@ azurestorage.queues.transactionauthrequestedtevents.name=transactionauthrequeste
 azurestorage.queues.transactionauthrequestedtevents.visibilityTimeout=300
 azurestorage.queues.transactionactivatedevents.name=transactionactivatedevents
 azurestorage.queues.transactionclosuresentevents.name=transactionclosuresentevents
+azurestorage.queues.transactionrefund.name=transactionrefundqueue
 
 payment.token.validity=120
 transactions.ecommerce.retry.offset=20
