--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -38,9 +38,9 @@ management.health.circuitbreakers.enabled=true
 azurestorage.connectionstring=${ECOMMERCE_STORAGE_CONNECTION_STRING}
 azurestorage.queues.transactionauthrequestedtevents.name=${TRANSACTION_AUTHORIZATION_REQUESTED_EVENT_QUEUE_NAME}
 azurestorage.queues.transactionauthrequestedtevents.visibilityTimeout=${TRANSACTION_AUTHORIZATION_REQUESTED_EVENT_QUEUE_VISIBILITY_TIMEOUT}
-azurestorage.queues.transactionactivatedevents.name=${TRANSACTION_ACTIVATED_EVENT_QUEUE_NAME}
+azurestorage.queues.transactionexpiration.name=${TRANSACTION_EXPIRATION_QUEUE_NAME}
 azurestorage.queues.transactionrefund.name=${TRANSACTION_REFUND_QUEUE_NAME}
-azurestorage.queues.transactionclosuresentevents.name=${TRANSACTION_CLOSURE_SENT_EVENT_QUEUE_NAME}
+azurestorage.queues.transactionclosuresentevents.name=${TRANSACTION_CLOSEPAYMENT_RETRY_QUEUE_NAME}
 
 spring.devtools.restart.enabled=false
 server.error.include-stacktrace=never
