added new queue configuration pagopa-ecommerce-transactions-closepayment-queue

--- a/src/test/resources/application-tests.properties
+++ b/src/test/resources/application-tests.properties
@@ -35,6 +35,7 @@ azurestorage.connectionstring=DefaultEndpointsProtocol=http;AccountName=devstore
 azurestorage.queues.transactionexpiration.name=expiration-queue
 azurestorage.queues.transactionrefund.name=refund-queue
 azurestorage.queues.transactionclosepaymentretry.name=closure-retry-queue
+azurestorage.queues.transactionclosepayment.name=closure-queue
 
 payment.token.validity=120
 transactions.ecommerce.retry.offset=20
