--- a/.env.example
+++ b/.env.example
@@ -42,6 +42,7 @@ TRANSACTION_AUTHORIZATION_REQUESTED_EVENT_QUEUE_VISIBILITY_TIMEOUT=60
 TRANSACTION_EXPIRATION_QUEUE_NAME=pagopa-ecommerce-transactions-expiration-queue
 TRANSACTION_CLOSEPAYMENT_RETRY_QUEUE_NAME=pagopa-ecommerce-transactions-closepayment-retry-queue
 TRANSACTION_REFUND_QUEUE_NAME=pagopa-ecommerce-transactions-refund-queue
+TRANSACTION_CLOSEPAYMENT_QUEUE_NAME=pagopa-ecommerce-transactions-closepayment-queue
 
 NOTIFICATIONS_SERVICE_API_KEY=api-key
 NOTIFICATIONS_SERVICE_URI="http://pagopa-ecommerce-traefik/notifications-service"
