--- a/api-spec/transactions-api.yaml
+++ b/api-spec/transactions-api.yaml
@@ -90,6 +90,31 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/ProblemJson"
+    delete:
+      operationId: requestTransactionUserCancellation
+      parameters:
+        - in: path
+          name: transactionId
+          schema:
+            type: string
+          required: true
+          description: Transaction ID
+      summary: Performs the cancellation of the transaction
+      responses:
+        202:
+          description: Transaction cancellation request successfully accepted
+        404:
+          description: Transaction not found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ProblemJson'
+        500:
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ProblemJson'
   /transactions/{transactionId}/auth-requests:
     summary: Request authorization for the transaction identified by payment token
     post:
