feat: align statuses to common

--- a/api-spec/transactions-api.yaml
+++ b/api-spec/transactions-api.yaml
@@ -576,12 +576,17 @@ components:
         - AUTHORIZATION_COMPLETED
         - CLOSED
         - CLOSURE_ERROR
-        - NOTIFIED
+        - NOTIFIED_OK
+        - NOTIFIED_KO
         - EXPIRED
         - REFUNDED
         - CANCELED
         - EXPIRED_NOT_AUTHORIZED
         - UNAUTHORIZED
+        - REFUND_ERROR
+        - REFUND_REQUESTED
+        - CANCELLATION_REQUESTED
+        - CANCELLATION_EXPIRED
     ClientId:
       type: string
       description: Enumerations of client ids
