feat(confidential): update pagopa-ecommerce-commons with new confidential data management

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -53,3 +53,4 @@ jwt.secret=${JWT_SECRET}
 jwt.validityMillis=${JWT_TOKEN_VALIDITY_TIME_MILLIS}
 
 confidentialDataManager.emailEncryptionKey=${EMAIL_ENCRYPTION_KEY}
+confidentialDataManager.personalDataVaultApiKey=${PERSONAL_DATA_VAULT_API_KEY}
