--- a/helm/values-dev.yaml
+++ b/helm/values-dev.yaml
@@ -109,6 +109,7 @@ microservice-chart:
     PAYMENT_TRANSACTIONS_GATEWAY_API_KEY: payment-transactions-gateway-api-key
     JWT_SECRET: sessions-jwt-secret
     EMAIL_ENCRYPTION_KEY: email-encryption-key
+    PERSONAL_DATA_VAULT_API_KEY: personal-data-vault-api-key
   keyvault:
     name: "pagopa-d-ecommerce-kv"
     tenantId: "7788edaf-0346-4068-9d79-c868aed15b3d"
