--- a/helm/values-uat.yaml
+++ b/helm/values-uat.yaml
@@ -56,6 +56,7 @@ microservice-chart:
       PAYMENT_TRANSACTIONS_GATEWAY_API_KEY: payment-transactions-gateway-api-key
       JWT_SECRET: sessions-jwt-secret
       EMAIL_ENCRYPTION_KEY: email-encryption-key
+      PERSONAL_DATA_VAULT_API_KEY: personal-data-vault-api-key
   image:
     repository: pagopaucommonacr.azurecr.io/pagopaecommercetransactionsservice
     tag: "0.10.2"
@@ -161,6 +162,7 @@ microservice-chart:
     PAYMENT_TRANSACTIONS_GATEWAY_API_KEY: payment-transactions-gateway-api-key
     JWT_SECRET: sessions-jwt-secret
     EMAIL_ENCRYPTION_KEY: email-encryption-key
+    PERSONAL_DATA_VAULT_API_KEY: personal-data-vault-api-key
   keyvault:
     name: "pagopa-u-ecommerce-kv"
     tenantId: "7788edaf-0346-4068-9d79-c868aed15b3d"
