CHK-1258-user-cancel-api (#166)
* added new queue configuration pagopa-ecommerce-transactions-closepayment-queue

* feat:added API definition

* fix:spotless apply

* feat: added CancellationRequestProjectionHandler and CancellationRequestProjectionHandlerTest

* feat: added handler and logic

* feat: spotless fix

* feat: added handler logic for write queue and eventStore

* feat: fix problems during the test

* feat:removed TransactionCancelCommand.java

* fix: transactionId toString into event

* fix: CircuitBreaker

* feat: refactoring class name

* feat: added unit test for TransactionsControllerTest and TransactionUserCancelHandlerTest.

* feat: added unit test for TransactionServiceTests.java

* feat: updated test

* feat: added test for TransactionUserCancelHandlerTest.java

* fix coverage

* removed unused method

* fixed test after merge

* feat comment resolution

* Fix test problem

* Fix test added verify number of call

* feat: added handling of error code 409

* Update src/test/java/it/pagopa/transactions/commands/handlers/TransactionUserCancelHandlerTest.java

* Update src/test/java/it/pagopa/transactions/commands/handlers/TransactionUserCancelHandlerTest.java

* Update src/test/java/it/pagopa/transactions/commands/handlers/TransactionUserCancelHandlerTest.java

* Update src/test/java/it/pagopa/transactions/commands/handlers/TransactionUserCancelHandlerTest.java

* Update src/test/java/it/pagopa/transactions/commands/handlers/TransactionUserCancelHandlerTest.java

* fix: spotless

---------

Co-authored-by: Pietro Tota <115724836+pietro-tota@users.noreply.github.com>
Co-authored-by: Pietro Tota <pietro.tota@pagopa.it>

--- a/api-spec/transactions-api.yaml
+++ b/api-spec/transactions-api.yaml
@@ -101,6 +101,39 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/ProblemJson"
+    delete:
+      tags:
+        - transactions
+      operationId: requestTransactionUserCancellation
+      parameters:
+        - in: path
+          name: transactionId
+          schema:
+            type: string
+          required: true
+          description: Transaction ID
+      summary: Performs the cancellation of the transaction
+      responses:
+        '202':
+          description: Transaction cancellation request successfully accepted
+        '404':
+          description: Transaction not found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ProblemJson'
+        '409':
+          description: Conflict on payment status
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ProblemJson'
+        '500':
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ProblemJson'
   /transactions/{transactionId}/auth-requests:
     post:
       tags:
