refactor(env): add env var for PDV API basepath

--- a/.env.example
+++ b/.env.example
@@ -59,3 +59,4 @@ JWT_TOKEN_VALIDITY_TIME_MILLIS=600000
 
 EMAIL_ENCRYPTION_KEY=EWsfdHUIDwLwYwC0zIMlrw==
 PERSONAL_DATA_VAULT_API_KEY=personal-data-vault-api-key
+PERSONAL_DATA_VAULT_API_BASE_PATH="https://api.uat.tokenizer.pdv.pagopa.it/tokenizer/v1"
