--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -53,4 +53,5 @@ jwt.secret=${JWT_SECRET}
 jwt.validityMillis=${JWT_TOKEN_VALIDITY_TIME_MILLIS}
 
 confidentialDataManager.emailEncryptionKey=${EMAIL_ENCRYPTION_KEY}
-confidentialDataManager.personalDataVaultApiKey=${PERSONAL_DATA_VAULT_API_KEY}
+confidentialDataManager.personalDataVault.apiKey=${PERSONAL_DATA_VAULT_API_KEY}
+confidentialDataManager.personalDataVault.apiBasePath=${PERSONAL_DATA_VAULT_API_BASE_PATH}
