--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -40,6 +40,7 @@ azurestorage.queues.transactionexpiration.name=${TRANSACTION_EXPIRATION_QUEUE_NA
 azurestorage.queues.transactionrefund.name=${TRANSACTION_REFUND_QUEUE_NAME}
 azurestorage.queues.transactionclosepaymentretry.name=${TRANSACTION_CLOSEPAYMENT_RETRY_QUEUE_NAME}
 azurestorage.queues.transactionclosepayment.name=${TRANSACTION_CLOSEPAYMENT_QUEUE_NAME}
+azurestorage.queues.transactionnotificationretry.name=${TRANSACTION_NOTIFICATIONS_RETRY_QUEUE_NAME}
 
 spring.devtools.restart.enabled=false
 server.error.include-stacktrace=never
