--- a/src/test/resources/application-tests.properties
+++ b/src/test/resources/application-tests.properties
@@ -36,6 +36,7 @@ azurestorage.queues.transactionexpiration.name=expiration-queue
 azurestorage.queues.transactionrefund.name=refund-queue
 azurestorage.queues.transactionclosepaymentretry.name=closure-retry-queue
 azurestorage.queues.transactionclosepayment.name=closure-queue
+azurestorage.queues.transactionnotificationretry.name=notifications-retry-queue
 
 payment.token.validity=120
 transactions.ecommerce.retry.offset=20
