--- a/.env.example
+++ b/.env.example
@@ -43,6 +43,7 @@ TRANSACTION_EXPIRATION_QUEUE_NAME=pagopa-ecommerce-transactions-expiration-queue
 TRANSACTION_CLOSEPAYMENT_RETRY_QUEUE_NAME=pagopa-ecommerce-transactions-closepayment-retry-queue
 TRANSACTION_REFUND_QUEUE_NAME=pagopa-ecommerce-transactions-refund-queue
 TRANSACTION_CLOSEPAYMENT_QUEUE_NAME=pagopa-ecommerce-transactions-closepayment-queue
+TRANSACTION_NOTIFICATIONS_RETRY_QUEUE_NAME=pagopa-ecommerce-transaction-notifications-retry-queue
 
 NOTIFICATIONS_SERVICE_API_KEY=api-key
 NOTIFICATIONS_SERVICE_URI="http://pagopa-ecommerce-traefik/notifications-service"
