--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -49,7 +49,7 @@ payment.token.validity=${PAYMENT_TOKEN_VALIDITY_TIME}
 transactions.ecommerce.retry.offset=${TRANSACTIONS_RETRY_OFFSET}
 
 transactions.closure_handler.retry_interval=${CLOSURE_RETRY_INTERVAL}
-
+transactions.user_receipt_handler.retry_interval=${USER_RECEIPT_RETRY_INTERVAL_SECONDS}
 jwt.secret=${JWT_SECRET}
 jwt.validityMillis=${JWT_TOKEN_VALIDITY_TIME_MILLIS}
 
